--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+#glContainer {
+    z-index: 1;
+    pointer-events: none;
+}
+
+#glContainer canvas {
+    z-index: 1;
+    pointer-events: none;
 }
